adjust the line height to stop the very bottom of wrapped text chopping off [PT #178925095]

--- a/src/applications/primo/www/components/collectionDiscovery/collectionGallery/galleryCollectionsList/_gallery-collections-list.scss
+++ b/src/applications/primo/www/components/collectionDiscovery/collectionGallery/galleryCollectionsList/_gallery-collections-list.scss
@@ -119,6 +119,7 @@ prm-gallery-collection {
                 left: 0.3em;
                 position: relative;
                 @extend .prm-background.prm-hue2;
+                line-height: 1.3;
             }
         }
         .item-info {
